<resources>
    <string name="app_name">HIIT Jump Rope</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="intense">Intense</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="done">FINISHED</string>
    <string name="timeDivider">/</string>
    <string name="timeCounter">00:00</string>
    <string name="blackoutMode">Black-Out Screen</string>
    <string name="workoutInfo">View Exercises</string>
</resources>
